Remove startTimestamp and update GET request to search by log_timestamp.